@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 37;
+use Test::More tests => 40;
 use Test::Exception;
 
 use_ok('npg_pipeline::pluggable::registry');
@@ -71,5 +71,10 @@ $i = $r->get_function_implementor('stage2pp');
 is ($i->{'module'}, 'stage2pp', 'module name');
 is ($i->{'method'}, 'create', 'method name');
 is_deeply ($i->{'params'}, {'pipeline_type' => 'stage2pp'}, 'params');
+
+$i = $r->get_function_implementor('stage2App');
+is ($i->{'module'}, 'stage2pp', 'module name');
+is ($i->{'method'}, 'create', 'method name');
+is_deeply ($i->{'params'}, {'pipeline_type' => 'stage2App'}, 'params');
 
 1;
